# OCR_11

./: .gitignore  README.md  clubs.json  competitions.json  config.py  locustfile.py  pyproject.toml  requirements.txt  run.py
gudlift/: __init__.py  routes.py  utils.py
gudlift/templates/: index.html  points_board.html  welcome.html
tests/integration/: booking_past_competitions_test.py  places_booking_errors_test.py  points_board_test.py
tests/unit/: places_booking_errors_test.py  test.py  unknown_email_error_test.py
