[tool.poetry]
name = "ocr-p11"
version = "0.1.0"
description = "testing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
flask = "^3.1.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
markupsafe = "^3.0.2"
werkzeug = "^3.1.3"
pytest = "^8.3.4"
locust = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
